attempting to fix the banner image on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     background-image: url("assets/servers.jpeg");
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed; 
+/*    background-attachment: fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
